rsocket_springboot_demo/asm/tcp/control_plane/http_springboot_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: rsocket-hello
  name: hello-gateway-mesh
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8001
        name: tcp
        protocol: TCP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: rsocket-hello
  name: hello-gateway-vs
spec:
  hosts:
    - "*"
  gateways:
    - hello-gateway-mesh
  http:
    - match:
        - port: 8001
      route:
        - destination:
            host: hello1-svc
